tests/NormalTests/paczka1/fuzzy1/58119738.err
Error in line 15: 8h23qoOGfCS S626 415,9
Error in line 13: JzDea A85 2,7
Error in line 16: bfYNuGlO S676 15,0
